--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Envelope Screen -->
     <div id="envelope-container">
-      <img src="envelope.png" alt="Envelope" id="envelope" />
+      <img src="envelope.png.url" alt="Envelope" id="envelope" />
       <p>♡ Letter for My Lovely ♡</p>
     </div>
 
@@ -26,13 +26,13 @@
       <div class="letter-window">
         <h1 id="letter-title">Will you be my forever Valentine, Keiera? (˵ ¬ᴗ¬˵)</h1>
 
-        <img src="cat_heart.gif" class="cat" id="letter-cat" />
+        <img src="cat_heart.gif.url" class="cat" id="letter-cat" />
 
         <div class="buttons" id="letter-buttons">
-          <img src="yes.png" class="btn yes-btn" alt="Yes" />
+          <img src="yes.png.url" class="btn yes-btn" alt="Yes" />
 
           <div class="no-wrapper">
-            <img src="no.png" class="btn no-btn" alt="No" />
+            <img src="no.png.url" class="btn no-btn" alt="No" />
           </div>
         </div>
 
