Just being silly

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>So glad you feel the same way! I bet this all had you like:</strong>  ( ˶°ㅁ°) !!
+          <strong>So glad you feel the same way! I bet this all had you like:</strong>  ( ˶°ㅁ°) !! Anyway here's a cameo from one of your favorite colors (coz why not)
         </p>
       </div>
     </div>
